fixed image alignment in smaller views

--- a/css/style.css
+++ b/css/style.css
@@ -504,7 +504,7 @@ img.team {
   border: 2px solid #86a333;
   background-color: #86a333;
   padding: 5px;
-  margin-top:20px;
+  margin:0 auto;
   } 
 
 
